--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "main": "index.js",
   "scripts": {
     "coverage": "npx truffle run coverage",
+    "migrate": "npx truffle migrate",
     "ganache": "npx ganache-cli",
     "test": "npx truffle test"
   },
@@ -21,6 +22,7 @@
   "dependencies": {
     "@openzeppelin/contracts": "^4.5.0",
     "@openzeppelin/contracts-upgradeable": "^4.5.2",
+    "@openzeppelin/test-helpers": "^0.5.15",
     "@openzeppelin/truffle-upgrades": "^1.14.0",
     "@truffle/hdwallet-provider": "^2.0.4",
     "bignumber.js": "^9.0.2",
